--- a/Index.html
+++ b/Index.html
@@ -4,9 +4,90 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="icon" href="img/ico.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Barlow&display=swap" rel="stylesheet">
+    <title>Cat&Dog Friendly - Articulos para mascotas</title>
 </head>
 <body>
-    
+    <header class="cont">
+<!--Encabezado-->
+        <div class="cont-item">
+            <div class="encabezado1">
+            <span><i class="material-symbols-outlined">phone_iphone</i>Llamanos: 300 000 0000</span>
+            <span><i class="material-symbols-outlined">forward_to_inbox</span></i>Escribenos</span>
+            </div>
+            <div class="encabezado2">
+                <a><i class="material-symbols-outlined">phone_iphone</i></a>
+                <a><i class="material-symbols-outlined">forward_to_inbox</span></i></a>
+            </div>
+        </div>
+
+
+  <!--Menu-->
+
+  <nav class="navbar navbar-expand-lg bg-light">
+    <div class="container-fluid">
+      <img src="img/logo.png" alt="Logo" width="216" class="d-inline-block align-text-top"></a>
+      <div class="collapse navbar-collapse" id="navbarScroll">
+        <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#"><i class="material-symbols-outlined">Home</i>Home</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><img src="img/ico_perro.png">
+              Perros
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Alimento</a></li>
+              <li><a class="dropdown-item" href="#">Cuidado</a></li>
+              <li><a class="dropdown-item" href="#">Higiene</a></li>
+              <li><a class="dropdown-item" href="#">Accesorios</a></li>
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><img src="img/ico_gato.png">
+              Gatos
+            </a>
+            <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Alimento</a></li>
+                <li><a class="dropdown-item" href="#">Cuidado</a></li>
+                <li><a class="dropdown-item" href="#">Higiene</a></li>
+                <li><a class="dropdown-item" href="#">Accesorios</a></li>
+              </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" justify-cotent="center"><i class="material-symbols-outlined">Person</i>
+              Cuenta
+            </a>
+            <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Ingresar</a></li>
+                <li><a class="dropdown-item" href="#">Crear Cuenta</a></li>
+              </ul>
+          </li>
+          <li class="nav-item" style="align-items: center"></li>
+          <a class="nav-link active" aria-current="page" href="#"><i class="material-symbols-outlined">shopping_cart</i>Cesta</a>
+             </div>
+            </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+    </header>
+  
+    <!--Slider-->
+    <!--valores-->
+    <!--productos-->
+    <!--Marcas-->
+    <!--Footer-->
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    <script src="main.js"></script>
 </body>
 </html>
