--- a/Index.html
+++ b/Index.html
@@ -14,7 +14,7 @@
     <title>Cat&Dog Friendly - Articulos para mascotas</title>
 </head>
 <body>
-    <header class="cont">
+    <header class="cont-fluid">
 <!--Encabezado-->
         <div class="cont-item">
             <div class="encabezado1">
@@ -29,12 +29,14 @@
 
 
   <!--Menu-->
-
-  <nav class="navbar navbar-expand-lg bg-light">
+  <nav class="navbar navbar-expand-lg bg-light d-flec justify-content-center">
     <div class="container-fluid">
       <img src="img/logo.png" alt="Logo" width="216" class="d-inline-block align-text-top"></a>
-      <div class="collapse navbar-collapse" id="navbarScroll">
-        <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#"><i class="material-symbols-outlined">Home</i>Home</a>
           </li>
@@ -54,36 +56,194 @@
               Gatos
             </a>
             <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Alimento</a></li>
-                <li><a class="dropdown-item" href="#">Cuidado</a></li>
-                <li><a class="dropdown-item" href="#">Higiene</a></li>
-                <li><a class="dropdown-item" href="#">Accesorios</a></li>
-              </ul>
+              <li><a class="dropdown-item" href="#">Alimento</a></li>
+              <li><a class="dropdown-item" href="#">Cuidado</a></li>
+              <li><a class="dropdown-item" href="#">Higiene</a></li>
+              <li><a class="dropdown-item" href="#">Accesorios</a></li>
+            </ul>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" justify-cotent="center"><i class="material-symbols-outlined">Person</i>
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="material-symbols-outlined">Person</i>
               Cuenta
             </a>
             <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Ingresar</a></li>
-                <li><a class="dropdown-item" href="#">Crear Cuenta</a></li>
-              </ul>
+              <li><a class="dropdown-item" href="#">Ingresar</a></li>
+              <li><a class="dropdown-item" href="#">Crear cuenta</a></li>
+            </ul>
           </li>
-          <li class="nav-item" style="align-items: center"></li>
-          <a class="nav-link active" aria-current="page" href="#"><i class="material-symbols-outlined">shopping_cart</i>Cesta</a>
-             </div>
-            </li>
-        </ul>
+          <li class="nav-item">
+            <a class="nav-link" href="#"><i class="material-symbols-outlined">shopping_cart</i>Cesta</a>
+          </li>
+          </ul>
       </div>
     </div>
   </nav>
     </header>
   
     <!--Slider-->
+<section>
+    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="img/banner_perros.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="img/banner_gatos.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="img/banner_general.jpg" class="d-block w-100" alt="...">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+  </section>
+
     <!--valores-->
+  <section class="w-100">
+    <div class="row w-80 mx-auto">
+      <div class="col-lg-3 col-md-6 col-sm-12">
+        <center><img src="img/icono-09.jpg"></center>
+        <h5 align="center"><span style="color:#FCC200"><Strong>Envios Nacionales</Strong></span></h5>
+        <p align="center" style="color:#FCC200">Ciudades Principales</p>
+      </div>
+
+      <div class="col-lg-3 col-md-6 col-sm-12">
+        <center><img src="img/icono-10.jpg"></center>
+        <h5 align="center"><span style="color:#FCC200"><Strong>Envios Contraentrega</Strong></span></h5>
+        <p align="center" style="color:#FCC200">Solo para Bogotá</p>
+      </div>
+
+      <div class="col-lg-3 col-md-6 col-sm-12">
+        <center><img src="img/icono-11.jpg"></center>
+        <h5 align="center"><span style="color:#FCC200"><Strong>Envios Xpress</Strong></span></h5>
+        <p align="center" style="color:#FCC200">Solo para Bogotá</p>
+      </div>
+
+      <div class="col-lg-3 col-md-6 col-sm-12">
+        <center><img src="img/icono-12.jpg"></center>
+        <h5 align="center"><span style="color:#FCC200"><Strong>Envios Gratis</Strong></span></h5>
+        <p align="center" style="color:#FCC200">Compras de $150.000</p>
+      </div>
+      </div>
+    </div>
+    <hr>
+
+  </section>
+  
     <!--productos-->
+    <section class="product">
+      <h1 align="center" style="color:#004682"><strong>PROMOCIONES</strong></h1>
+      <div class="row w-100 mx-auto" style="background-color:#9FCCED;">
+        <div class="col-lg-3 col-md-6 col-sm-12">
+          <div class="card" style="width: 18rem;">
+            <img src="img/productos/1_Alimento_perro_adulto.jpg" class="card-img-top">
+            <div class="card-body">
+              <h5 class="text-title">Pedigree Concentrado</h5>
+              <p class="text_precio">$75.000</p>
+              <a href="#" class="btn btn-primary">Ver producto</a>
+              <a href="#" class="btn btn-primary" style="background-color: #FCC200;border-color:#FCC200; hover-bg: #ffd549 ">Comprar</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 col-sm-12">
+          <div class="card" style="width: 18rem;">
+            <img src="img/productos/1_Alimento_perro_adulto.jpg" class="card-img-top">
+            <div class="card-body">
+              <h5 class="text-title">Pedigree Concentrado</h5>
+              <p class="text_precio">$75.000</p>
+              <a href="#" class="btn btn-primary">Ver producto</a>
+              <a href="#" class="btn btn-primary" style="background-color: #FCC200;border-color:#FCC200; hover-bg: #ffd549 ">Comprar</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 col-sm-12">
+          <div class="card" style="width: 18rem;">
+            <img src="img/productos/1_Alimento_perro_adulto.jpg" class="card-img-top">
+            <div class="card-body">
+              <h5 class="text-title">Pedigree Concentrado</h5>
+              <p class="text_precio">$75.000</p>
+              <a href="#" class="btn btn-primary">Ver producto</a>
+              <a href="#" class="btn btn-primary" style="background-color: #FCC200;border-color:#FCC200; hover-bg: #ffd549 ">Comprar</a>
+            </div>
+          </div>
+        </div>
+       
+        <div class="col-lg-3 col-md-6 col-sm-12">
+          <div class="card" style="width: 18rem;">
+            <img src="img/productos/1_Alimento_perro_adulto.jpg" class="card-img-top">
+            <div class="card-body">
+              <h5 class="text-title">Pedigree Concentrado</h5>
+              <p class="text_precio">$75.000</p>
+              <a href="#" class="btn btn-primary">Ver producto</a>
+              <a href="#" class="btn btn-primary" style="background-color: #FCC200; border-color:#FCC200; hover-bg: #fadc78 ">Comprar</a>
+            </div>
+          </div>
+        </div>
+
+
+    </section>
     <!--Marcas-->
+
+  <section class="product">
+    <h1 align="center" style="color:#004682"><strong>MARCAS DISPONIBLES</strong></h1>
+      <div class="row w-100 mx-auto">
+        <div class="col-lg-2 col-md-4 col-sm-6">
+          <img src="img/marcas/royal_Mesa de trabajo 1.jpg">
+        </div>
+        <div class="col-lg-2 col-md-4 col-sm-6">
+          <img src="img/marcas/purina_Mesa de trabajo 1.jpg">
+        </div>
+        <div class="col-lg-2 col-md-4 col-sm-6">
+          <img src="img/marcas/planet_pet_Mesa de trabajo 1.jpg">
+        </div>
+        <div class="col-lg-2 col-md-4 col-sm-6">
+          <img src="img/marcas/petuky_Mesa de trabajo 1.jpg">
+        </div>
+        <div class="col-lg-2 col-md-4 col-sm-6">
+          <img src="img/marcas/pets_Mesa de trabajo 1.jpg">
+        </div>
+        <div class="col-lg-2 col-md-4 col-sm-6">
+          <img src="img/marcas/iams_Mesa de trabajo 1.jpg">
+        </div>
+        <div class="col-lg-2 col-md-4 col-sm-6">
+          <img src="img/marcas/hills_Mesa de trabajo 1.jpg">
+        </div>
+        <div class="col-lg-2 col-md-4 col-sm-6">
+          <img src="img/marcas/chunky_Mesa de trabajo 1.jpg">
+        </div>
+        <div class="col-lg-2 col-md-4 col-sm-6">
+          <img src="img/marcas/royal_Mesa de trabajo 1.jpg">
+        </div>
+        <div class="col-lg-2 col-md-4 col-sm-6">
+          <img src="img/marcas/whiskas_Mesa de trabajo 1.jpg">
+        </div>
+        <div class="col-lg-2 col-md-4 col-sm-6">
+          <img src="img/marcas/temptations_Mesa de trabajo 1.jpg">
+        </div>
+        <div class="col-lg-2 col-md-4 col-sm-6">
+          <img src="img/marcas/sheba_Mesa de trabajo 1.jpg">
+        </div>
+  </section>
+
+
     <!--Footer-->
+      <section class="w-100" style="background-color:#004682 ;">
+        <div class="col-lg-"> <img src="img/logo_blanco.png"> </div>
+      <div class="row w-40 mx-auto">
+        <div class="col-lg-3 col-md-6 col-sm-12">
+        </div>
+
+      
+    </section>
 
 
 
