creacion login y registro

--- a/Index.html
+++ b/Index.html
@@ -38,7 +38,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#"><i class="material-symbols-outlined">Home</i>Home</a>
+            <a class="nav-link active" aria-current="page" href="Index.html"><i class="material-symbols-outlined">Home</i>Home</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><img src="img/ico_perro.png">
@@ -67,8 +67,8 @@
               Cuenta
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Ingresar</a></li>
-              <li><a class="dropdown-item" href="#">Crear cuenta</a></li>
+              <li><a class="dropdown-item" href="login.html">Ingresar</a></li>
+              <li><a class="dropdown-item" href="registro.html">Crear cuenta</a></li>
             </ul>
           </li>
           <li class="nav-item">
@@ -236,14 +236,44 @@
 
 
     <!--Footer-->
-      <section class="w-100" style="background-color:#004682 ;">
-        <div class="col-lg-"> <img src="img/logo_blanco.png"> </div>
+      <!--section class="w-100" style="background-color:#004682 ;">
+        <div class="col-lg-3"> <img src="img/logo_blanco.png"> </div>
       <div class="row w-40 mx-auto">
         <div class="col-lg-3 col-md-6 col-sm-12">
         </div>
+    </section-->
 
-      
-    </section>
+    <footer class="pie-pagina">
+      <div class="grupo-1">
+      <div class="box">
+        <figure>
+          <a href="#">
+            <img src="img/logo_blanco.png" alt="logo_blanco">
+          </a>
+        </figure>
+      </div>
+      <div class="box">
+        <h2>LINKS DE INTERES</h2>
+        <p>Nosotros</p>
+        <p>Politicas de Envio</p>
+        <p>Devoluciones</p>
+        <p>Proteccion de datos</p>
+      </div>
+      <div class="box">
+        <h2>SIGUENOS</h2>
+        <div Class="red-social">
+          <a href="#" class="fa fa-facebook"></a>
+          <a href="#" class="fa fa-instagram"></a>
+          <a href="#" class="fa fa-youtube"></a>
+        </div>
+      </div>
+      </div>
+      <div class="grupo-2">
+        <small>&COPY; 2022 <b>Gissel Ariza</b> - Todos los derechos reservados</small>
+
+      </div>
+
+    </footer>
 
 
 
